--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "javascript-state-machine": "^3.0.1",
+    "localtunnel": "^1.8.3",
     "node-cmd": "^3.0.0",
     "socket.io": "^2.0.4"
   },
